[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli"
version = "0.1.0"
description = "Legacy Wiki CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
wiki = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "lint-imports>=1.12",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["adapters*", "application*", "domain*"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "ANN"]

[tool.mypy]
strict = true
python_version = "3.13"